RESOLVED FIXED50614
[chromium] compositor lost context recovery fix
https://bugs.webkit.org/show_bug.cgi?id=50614
Summary [chromium] compositor lost context recovery fix
Alexey Marinichev
Reported 2010-12-06 20:23:56 PST
[chromium] compositor lost context recovery fix
Attachments
Patch (1.47 KB, patch)
2010-12-06 20:27 PST, Alexey Marinichev
no flags
Alexey Marinichev
Comment 1 2010-12-06 20:27:57 PST
Alexey Marinichev
Comment 2 2010-12-06 20:36:26 PST
LayerChromium::setNeedsDisplay was not resetting x and y. When 3D context is restored after having been lost, this function is called recursively from LayerChromium::setLayerRenderer. If x and y are not reset, this effectively makes the layer larger, which triggers an assert later on.
James Robinson
Comment 3 2010-12-06 20:48:46 PST
Comment on attachment 75779 [details] Patch OK
James Robinson
Comment 4 2010-12-07 16:50:31 PST
Comment on attachment 75779 [details] Patch Will land by hand
James Robinson
Comment 5 2010-12-07 16:53:21 PST
Comment on attachment 75779 [details] Patch Clearing flags on attachment: 75779 Committed r73479: <http://trac.webkit.org/changeset/73479>
James Robinson
Comment 6 2010-12-07 16:53:25 PST
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 7 2010-12-07 18:48:09 PST
The commit-queue encountered the following flaky tests while processing attachment 75779 [details]: fast/preloader/script.html animations/combo-transform-translate+scale.html Please file bugs against the tests. These tests were authored by abarth@webkit.org, cmarrin@apple.com, darin@apple.com, ojan@chromium.org, and pol@apple.com. The commit-queue is continuing to process your patch.
Note You need to log in before you can comment on or make changes to this bug.